clean window class.
even it 300 lines. 60% is just @propertys.

next: renderer , inputmanager.

--- a/5_structure/window_setting.yml
+++ b/5_structure/window_setting.yml
@@ -1,3 +1,8 @@
+attrs:
+  dt: 0.016666666666666666
+  init_size:
+  - 640
+  - 480
 glDisable:
 - GL_LINE_SMOOTH
 glEnable:
@@ -11,7 +16,7 @@ gles31_glfwWindowHint:
   GLFW_OPENGL_PROFILE: 0
 glfwWindowHint:
   GLFW_CENTER_CURSOR: 1
-  GLFW_DECORATED: 0
+  GLFW_DECORATED: 1
   GLFW_DOUBLEBUFFER: 1
   GLFW_FLOATING: 1
   GLFW_FOCUSED: 1
@@ -20,3 +25,5 @@ glfwWindowHint:
   GLFW_SAMPLES: 4
   GLFW_TRANSPARENT_FRAMEBUFFER: 1
 ifgles31shader: "#version 300 es \nprecision highp float;"
+xxfunc:
+- glfw_fullscreen
