more direct name
SPACE to ' '
ESC CTRL.
NUM0 NUM.
but only BACKSLASH.

--- a/5_structure/glfw_keydict.yaml
+++ b/5_structure/glfw_keydict.yaml
@@ -1,5 +1,8 @@
+#_ removed all area. since _ will be seperator.
+#python ready also. BACKSLASH only remaind.
+#ESC, CTRL and PAGEDOWN and DELETE
 {
-32 : "SPACE" ,
+32 : " " , #youwanna doit??
 39 : "'"  ,     #/* ' */,
 44 : ","  ,     #/* , */,
 45 : "-"  ,     #/* - */,
@@ -43,12 +46,12 @@
 88 : "X" ,
 89 : "Y" ,
 90 : "Z" ,
-91 : "["  ,     #/* [ */,
+91 : "["  ,
 92 : "BACKSLASH"  ,     #/* \ */,
-93 : "]"  ,     #/* ] */,
-96 : "`"  ,     #/* ` */,
-161 : "WORLD_1"  ,     #/* non-US #1 */,
-162 : "WORLD_2"  ,     #/* non-US #2 */,
+93 : "]"  ,
+96 : "`"  ,
+161 : "WORLD1"  ,     #/* non-US #1 */,
+162 : "WORLD2"  ,     #/* non-US #2 */,
 256 : "ESCAPE" ,
 257 : "ENTER" ,
 258 : "TAB" ,
@@ -61,14 +64,14 @@
 264 : "DOWN" ,
 265 : "UP" ,
 
-266 : "PAGE_UP" ,
-267 : "PAGE_DOWN" ,
+266 : "PAGEUP" ,
+267 : "PAGEDOWN" ,
 268 : "HOME" ,
 269 : "END" ,
-280 : "CAPS_LOCK" ,
-281 : "SCROLL_LOCK" ,
-282 : "NUM_LOCK" ,
-283 : "PRINT_SCREEN" ,
+280 : "CAPSLOCK" ,
+281 : "SCROLLLOCK" ,
+282 : "NUMLOCK" ,
+283 : "PRINTSCREEN" ,
 284 : "PAUSE" ,
 
 290 : "F1" ,
@@ -97,45 +100,32 @@
 313 : "F24" ,
 314 : "F25" ,
 
-320 : "KP_0" ,
-321 : "KP_1" ,
-322 : "KP_2" ,
-323 : "KP_3" ,
-324 : "KP_4" ,
-325 : "KP_5" ,
-326 : "KP_6" ,
-327 : "KP_7" ,
-328 : "KP_8" ,
-329 : "KP_9" ,
-330 : "KP_DECIMAL" ,
-331 : "KP_DIVIDE" ,
-332 : "KP_MULTIPLY" ,
-333 : "KP_SUBTRACT" ,
-334 : "KP_ADD" ,
-335 : "KP_ENTER" ,
-336 : "KP_EQUAL" ,
+320 : "NUM0" ,
+321 : "NUM1" ,
+322 : "NUM2" ,
+323 : "NUM3" ,
+324 : "NUM4" ,
+325 : "NUM5" ,
+326 : "NUM6" ,
+327 : "NUM7" ,
+328 : "NUM8" ,
+329 : "NUM9" ,
+330 : "NUM." ,
+331 : "NUM/" ,
+332 : "NUM*" ,
+333 : "NUM-" ,
+334 : "NUM+" ,
+335 : "NUMENTER" ,
+336 : "NUM=" ,
 
 340 : "SHIFT" ,
-341 : "CONTROL" ,
+341 : "CTRL" ,
 342 : "ALT" ,
 343 : "SUPER" ,
 
-344 : "RIGHT_SHIFT" ,
-345 : "RIGHT_CONTROL" ,
-346 : "RIGHT_ALT" ,
-347 : "RIGHT_SUPER" ,
+344 : "RIGHTSHIFT" ,
+345 : "RIGHTCONTROL" ,
+346 : "RIGHTALT" ,
+347 : "RIGHTSUPER" ,
 348 : "MENU" ,
 }
-
-# 32 : " " ,
-# 39 : "'"  ,     #/* ' */,
-# 44 : ","  ,     #/* , */,
-# 45 : "-"  ,     #/* - */,
-# 46 : "."  ,     #/* . */,
-# 47 : "/"  ,     #/* / */,
-# 59 : ";"  ,     #/* ; */,
-# 61 : "="  ,     #/* = */,
-# 91 : "["  ,     #/* [ */,
-# 92 : "\\"  ,     #/* \ */,
-# 93 : "]"  ,     #/* ] */,
-# 96 : "`"  ,     #/* ` */,
